# limine-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
barebones/: Cargo.toml  build.sh  limine.cfg
barebones/.cargo/: config.toml  kernel.ld  runner.sh  x86_64-barebones.json
barebones/conf/: limine.cfg  linker.ld
barebones/src/: io.rs  main.rs  writer.rs
limine-proc/: Cargo.toml
limine-proc/src/: lib.rs
src/: entrypoint.rs  file.rs  firmware.rs  firmware_type.rs  framebuffer.rs  lib.rs  memmap.rs  memory_map.rs  module.rs  modules.rs  mp.rs  paging.rs  request.rs  response.rs  smp.rs  uuid.rs
src/mp/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
