[package]
name = "limine"
description = "Rust crate for parsing the limine boot protocol structures"
version = "0.1.8"
edition = "2021"
authors = ["Anhad Singh <andypython@protonmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/limine-bootloader/limine-rs"

readme = "README.md"
categories = ["no-std"]

[features]
requests-section = ["limine-proc"]
into-uuid = ["uuid"]
default = []

[dependencies]
limine-proc = { optional = true, version = "0.1.0" }
uuid = { optional = true, version = "1.1.2", default-features = false }
