[package]
name = "limine"
description = "Rust crate for parsing the limine boot protocol structures"
version = "0.3.0"
edition = "2021"
authors = [
    "Anhad Singh <andypython@protonmail.com>",
    "Lysander Mealy <lysander.mealy@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/limine-bootloader/limine-rs"
rust-version = "1.77"

readme = "README.md"
categories = ["no-std"]

[dependencies]
bitflags = "2"
uuid = { version = "1", default-features = false, optional = true }

[features]
uuid = ["dep:uuid"]
ipaddr = []
