[package]
name = "limine"
version = "0.6.2"
edition = "2024"
authors = ["Julian Scheffers <julian@scheffers.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["no-std"]
repository = "https://github.com/robotman2412/limine-boot-rust"
description = "Rust interface for the Limine boot protocol"
