[package]
name = "limine-proc"
version = "0.1.0"
edition = "2021"
description = "Rust crate for parsing the limine boot protocol structures"
authors = ["Anhad Singh <andypython@protonmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/limine-bootloader/limine-rs"
categories = ["no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"

[dependencies.syn]
features = ["full"]
version = "1.0.91"
